--- a/src/atom/button/button.css
+++ b/src/atom/button/button.css
@@ -18,3 +18,10 @@
 .navbarbtn:hover{
     background-color: #3F3F3F;
 }
+
+
+@media screen and (max-width: 600px){
+    .searchbtn{
+         width: 20vw;
+    }
+ }
