--- a/src/atom/input/input.css
+++ b/src/atom/input/input.css
@@ -9,3 +9,12 @@
 .searchinput:focus{
    outline: none;
 }
+
+
+
+
+@media screen and (max-width: 600px){
+   .searchinput{
+        width: 60vw;
+   }
+}
