break in small components

--- a/src/components/episode/episode.module.css
+++ b/src/components/episode/episode.module.css
@@ -1,26 +1,11 @@
-.navbar {
-    margin: 0 auto;
-    padding: 1rem 1rem;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 15%);
-    border-radius: 0.5rem;
-    background-color: #efefe7;
-    display: grid;
-    grid-template-columns: repeat(15, 1fr);
-    line-height: 1;
-    color: #3c948b;
-}
-
-span:hover {
-    text-decoration: underline;
-}
-
 .episode {
     width: 70%;
     margin: 1rem auto;
     text-align: left;
 }
 
-h2 {
+.episode h2 {
     color: #3c948b;
     font-weight: 200;
+    margin-left: 0;
 }
