--- a/src/components/cast/cast.module.css
+++ b/src/components/cast/cast.module.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
-.card {
+.cast .card {
     text-align: left;
     margin: 1.5rem 1rem;
     display: grid;
@@ -14,18 +14,4 @@
 
 img {
     width: 100%;
-}
-.infoCard {
-    padding-left: 1rem;
-}
-.infoCard h2 {
-    font-weight: 250;
-    font-size: 1.3rem;
-    margin-left: 0;
-}
-
-a {
-    color: #3c948b;
-    text-decoration: none;
-    cursor: pointer;
 }
