--- a/src/components/cast/cast.module.css
+++ b/src/components/cast/cast.module.css
@@ -5,8 +5,8 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
-.cast .card {
-    text-align: left;
+.cast .castDetail {
+    text-align: left;   
     margin: 1.5rem 1rem;
     display: grid;
     grid-template-columns: 40% 1fr;
