--- a/src/molecules/seasonInfo/seasonInfo.module.css
+++ b/src/molecules/seasonInfo/seasonInfo.module.css
@@ -5,7 +5,7 @@
 }
 
 .seasonInfo {
-    margin-left: 2rem;
+    margin: 1rem;
 }
 
 .seasonInfo img {
@@ -13,8 +13,7 @@
 }
 
 .seasonInfo h3 {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem 0;
     line-height: 1;
 }
 
