--- a/src/components/info/info.module.css
+++ b/src/components/info/info.module.css
@@ -3,7 +3,14 @@
     margin-left: 11%;
     text-align: left;
     display: flex;
+    flex-wrap: wrap;
     font-size: 15px;
+}
+
+@media (max-width: 550px) {
+    .main {
+        justify-content: center;
+    }
 }
 
 h1 {
