--- a/src/organism/description/description.module.css
+++ b/src/organism/description/description.module.css
@@ -3,3 +3,14 @@
     text-align: left;
 }
 
+@media (max-width: 1094px) {
+    .summary {
+        flex-basis: 50%;
+    }
+}
+
+@media (max-width: 545px) {
+    .summary {
+        flex-basis: 100%;
+    }
+}
