--- a/src/components/show/show.module.css
+++ b/src/components/show/show.module.css
@@ -1,11 +1,8 @@
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 5%;
-    justify-content: center;
-}
-
-.filterwithContainer{
+.filterwithContainer {
     display: flex;
     flex-direction: row;
+}
+
+.show {
+    /* max-width: 80%; */
 }
