--- a/src/components/cast/cast.module.css
+++ b/src/components/cast/cast.module.css
@@ -10,10 +10,19 @@
 .cast .castDetail {
     text-align: left;
     margin: 1.5rem 1rem;
+    padding-right: 1rem;
     display: flex;
     flex-wrap: wrap;
+    background-color: #efefe7;
+    border-radius: 10px;
 }
 
 img {
     width: 100%;
+}
+@media (max-width: 485px) {
+    .castDetail {
+        justify-content: center;
+        padding-bottom: 1rem;
+    }
 }
