--- a/src/templates/showDetails/showDetails.module.css
+++ b/src/templates/showDetails/showDetails.module.css
@@ -1,10 +1,10 @@
 .showDetails {
+    width: 80%;
     margin: 1rem auto;
     text-align: left;
 }
 
-.showDetails h2 {
-    color: #3c948b;
-    font-weight: 200;
-    margin-left: 0;
+.showDetails__title {
+    margin-left: 1rem;
 }
+
