--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,37 @@
 .App {
     background-color: white;
+    /* width: 80%; */
+    /* display: flex; */
+    /* justify-content: center; */
 }
 
 button {
+    cursor: pointer;
+}
+
+/* Global styling */
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+p {
+    line-height: 1.6;
+}
+
+h1 {
+    font-weight: 300;
+}
+
+h2 {
+    color: #3c948b;
+    font-weight: 200;
+}
+
+a {
+    color: #3c948b;
+    text-decoration: none;
     cursor: pointer;
 }
