--- a/src/molecules/flashCard/flashCard.module.css
+++ b/src/molecules/flashCard/flashCard.module.css
@@ -6,9 +6,10 @@
     line-height: 1.6;
     margin-bottom: 2rem;
     border-radius: 1rem;
-    min-width: 310px;
+    min-width: 250px;
 }
-.flashCard h2 {
+
+.flashCard__title {
     font-weight: 300;
     font-size: 2rem;
     margin: 0.5rem;
