--- a/src/pages/people/people/people.module.css
+++ b/src/pages/people/people/people.module.css
@@ -1,8 +1,8 @@
-.filterwithContainer {
-    display: flex;
-    flex-direction: row;
+.people {
+    width: 80%;
+    margin: auto;
 }
 
-.show {
-    /* max-width: 80%; */
+.people__title {
+    margin-left: 1rem;
 }
