--- a/src/pages/shows/episode/episode.module.css
+++ b/src/pages/shows/episode/episode.module.css
@@ -1,11 +1,3 @@
-.episode {
-    width: 70%;
-    margin: 1rem auto;
-    text-align: left;
-}
-
-.episode h2 {
-    color: #3c948b;
-    font-weight: 200;
-    margin-left: 0;
+.episode__seasonNumber {
+    margin-left: 0.5rem;
 }
