--- a/src/pages/shows/shows/shows.module.css
+++ b/src/pages/shows/shows/shows.module.css
@@ -1,8 +1,8 @@
-.filterwithContainer {
-    display: flex;
-    flex-direction: row;
+.shows {
+    width: 80%;
+    margin: auto;
 }
 
-.show {
-    /* max-width: 80%; */
+.shows__title {
+    margin-left: 1rem;
 }
