--- a/src/templates/knownForShows/knownForShows.module.css
+++ b/src/templates/knownForShows/knownForShows.module.css
@@ -1,19 +1,12 @@
-.container {
-    display: flex;
-    margin: 0 11%;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.knownForCard {
+.knownForShows__Card {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-basis: 25%;
 }
 
-h2 {
-    margin-left: 12%;
+.knownForShows__title {
     font-size: 2.5rem;
     font-weight: 200;
+    margin-left: 0.5rem;
 }
