--- a/src/organism/header/header.module.css
+++ b/src/organism/header/header.module.css
@@ -2,6 +2,8 @@
     background-color: #3f3f3f;
     padding: 20px;
     color: white;
+    display: flex;
+    flex-direction: row;
 }
 
 .header--logo {
@@ -14,4 +16,11 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 760px) {
+    .header__logo__search{
+      flex-direction: column;
+      align-items: center;
+    }
 }
