--- a/src/atom/input/input.module.css
+++ b/src/atom/input/input.module.css
@@ -1,6 +1,6 @@
 .searchinput{
     background-color: white;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px;
     padding: 10px;
     width: 300px;
     border: none;
