--- a/src/molecules/combinedIcons/combinedIcons.module.css
+++ b/src/molecules/combinedIcons/combinedIcons.module.css
@@ -1,9 +1,9 @@
-.socailMediaIcon i {
+.combinedIcons i {
     font-size: 1.3rem;
     margin: 0.1rem;
 }
 
-.socailMediaIcon {
+.combinedIcons {
     text-align: right;
     margin: 1rem;
     margin-top: 2rem;
