--- a/src/molecules/episodeNav/episodeNav.module.css
+++ b/src/molecules/episodeNav/episodeNav.module.css
@@ -1,4 +1,4 @@
-.navBarEpisode {
+.episodeNav {
     margin: 0 auto;
     padding: 1rem;
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 15%);
@@ -14,7 +14,7 @@
     margin-top: 1rem;
 }
 
-.navBarEpisode__Season:hover {
+.episodeNav__Season:hover {
     text-decoration: underline;
 }
 
