--- a/src/atom/button/button.module.css
+++ b/src/atom/button/button.module.css
@@ -15,6 +15,14 @@
     padding: 15px;
 }
 
+.navbarActive{
+    background-color: #3F3F3F;
+    color: white;
+    border: none;
+    font-size: 15px;
+    padding: 15px;
+}
+
 .navbarbtn:hover{
     background-color: #3F3F3F;
 }
@@ -25,7 +33,6 @@
     padding: 10px;
     font-size: 1.2rem;
     margin-right: 0.2rem;
-    
 }
 
 .movienavbtn:hover{
