--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ button {
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
 }
 
 p {
