Favourite Dispatch Fixed

--- a/src/atom/button/button.module.css
+++ b/src/atom/button/button.module.css
@@ -61,4 +61,12 @@
     .searchbtn{
          width: 20vw;
     }
+
+    .navbarbtn{
+        width: 100%;
+    }
+    
+    .navbarActive{
+        width: 100%;
+    }
  }
