--- a/src/molecules/navbar/navbar.module.css
+++ b/src/molecules/navbar/navbar.module.css
@@ -8,3 +8,13 @@
     width: 80%;
     margin: auto;
 }
+
+@media screen and (max-width: 760px) {
+    .navbar__navLinks{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
