--- a/src/molecules/footer/footer.module.css
+++ b/src/molecules/footer/footer.module.css
@@ -10,8 +10,10 @@
 
 .footer__title {
     font-weight: 200;
+    font-size: 2rem;
     margin-bottom: -1rem;
 }
+
 .footer_icons {
     margin-top: 0rem;
 }
